# sing_tools

./: .gitignore  AGENTS.md  README.md  app.py  cache.db  config.yaml  dae_config.dae  deploy.py  deploy_dae.py  deploy_service.sh  inventory.py  pyproject.toml  run.sh  setup_bwh.py  sing-tools.service  sing-tools.timer  upload.py
docs/: bwh-reality.md  ipv6.md  mt3000-bj.md  relay.md
init.d/: mihomo
templates/: _base.sing.yaml  _base.yaml  base.yaml  camp-bb.yaml  camp-pk.yaml  mt3000-st.yaml  proxy_group.yaml
tests/: test_conversion.py
