[project]
name = "sing_tools"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "paramiko>=3.5.1",
    "pyinfra>=3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.9.2",
    "typer>=0.15.1",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PGH"]
ignore = [
  "E501" # Line too long
]
